--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1>Nothing</h1>
+<div class="container">
+    <h1>Sales Team</h1>
 
-<app-sales-person-list></app-sales-person-list>
+    <app-sales-person-list></app-sales-person-list>
+</div>
+
